# cv

./: .agent.md  .gitignore  CLAUDE.md  README.md  cv-validator.agent.md  job-tailor.agent.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cv/: build.py  cli.py  enrich.py  markdown.py  models.py  render.py
src/cv/data/: __init__.py  _oss_metrics.json  education.py  experience.py  languages.py  open_source.py  personal.py
src/cv/data/companies/: asimov.py  cavaguti.py  cogram.py  flipbit.py  medgrupo.py  nuclep.py  pmsp.py  puzzl.py  telemont.py  unhide.py
templates/: cv.tex.j2  preamble.tex.j2
